fix gap

--- a/style2.css
+++ b/style2.css
@@ -62,14 +62,14 @@ body {
 .main-cont > div:nth-child(2) {
     grid-row: span 1;
     background-color: var(--gray1);
-    padding: 5%;
+    padding: 0;
 
     display: grid;
-    grid-template-columns: repeat(auto-fit, 100px);
-    column-gap: 2%;
-    row-gap: 11%;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    row-gap: 100px;
+    column-gap: 20px;
     justify-content: center;
-    align-content: center;
+    align-content: start;
 }
 
 .main-cont > div:last-child {
@@ -111,7 +111,7 @@ body {
 /*================== Shelf Body =================*/
 .book {
     background-color: var(--gray3);
-    height: 200px;
+    height: 100px;
 }
 
 .add {
